src/qt/libqwidget.bf

	[LinkName("QWidget_WindowIcon")]
	public static extern QIcon QWidget_WindowIcon(Self* c_this);
	[LinkName("QWidget_SetWindowIconText")]
	public static extern void QWidget_SetWindowIconText(Self* c_this, libqt_string windowIconText);
	[LinkName("QWidget_WindowIconText")]
	public static extern libqt_string QWidget_WindowIconText(Self* c_this);
	[LinkName("QWidget_SetWindowRole")]
	public static extern void QWidget_SetWindowRole(Self* c_this, libqt_string windowRole);
	[LinkName("QWidget_WindowRole")]
	public static extern libqt_string QWidget_WindowRole(Self* c_this);
	[LinkName("QWidget_SetWindowFilePath")]
	public static extern void QWidget_SetWindowFilePath(Self* c_this, libqt_string filePath);
	[LinkName("QWidget_WindowFilePath")]
	public static extern libqt_string QWidget_WindowFilePath(Self* c_this);
	[LinkName("QWidget_SetWindowOpacity")]
	public static extern void QWidget_SetWindowOpacity(Self* c_this, double level);
	[LinkName("QWidget_WindowOpacity")]
	public static extern double QWidget_WindowOpacity(Self* c_this);
	[LinkName("QWidget_IsWindowModified")]
	public static extern bool QWidget_IsWindowModified(Self* c_this);
	[LinkName("QWidget_SetToolTip")]
	public static extern void QWidget_SetToolTip(Self* c_this, libqt_string toolTip);
	[LinkName("QWidget_ToolTip")]
	public static extern libqt_string QWidget_ToolTip(Self* c_this);
	[LinkName("QWidget_SetToolTipDuration")]
	public static extern void QWidget_SetToolTipDuration(Self* c_this, int32 msec);
	[LinkName("QWidget_ToolTipDuration")]
	public static extern int32 QWidget_ToolTipDuration(Self* c_this);
	[LinkName("QWidget_SetStatusTip")]
	public static extern void QWidget_SetStatusTip(Self* c_this, libqt_string statusTip);
	[LinkName("QWidget_StatusTip")]
	public static extern libqt_string QWidget_StatusTip(Self* c_this);
	[LinkName("QWidget_SetWhatsThis")]
	public static extern void QWidget_SetWhatsThis(Self* c_this, libqt_string whatsThis);
	[LinkName("QWidget_WhatsThis")]
	public static extern libqt_string QWidget_WhatsThis(Self* c_this);
	[LinkName("QWidget_AccessibleName")]
	public static extern libqt_string QWidget_AccessibleName(Self* c_this);
	[LinkName("QWidget_SetAccessibleName")]
	public static extern void QWidget_SetAccessibleName(Self* c_this, libqt_string name);
	[LinkName("QWidget_AccessibleDescription")]
	public static extern libqt_string QWidget_AccessibleDescription(Self* c_this);
	[LinkName("QWidget_SetAccessibleDescription")]
	public static extern void QWidget_SetAccessibleDescription(Self* c_this, libqt_string description);
	[LinkName("QWidget_SetLayoutDirection")]
	public static extern void QWidget_SetLayoutDirection(Self* c_this, int64 direction);
	[LinkName("QWidget_LayoutDirection")]
	public static extern int64 QWidget_LayoutDirection(Self* c_this);
	[LinkName("QWidget_UnsetLayoutDirection")]
	public static extern void QWidget_UnsetLayoutDirection(Self* c_this);
	[LinkName("QWidget_SetLocale")]
	public static extern void QWidget_SetLocale(Self* c_this, QLocale* locale);
	[LinkName("QWidget_Locale")]
	public static extern QLocale QWidget_Locale(Self* c_this);
	[LinkName("QWidget_UnsetLocale")]
	public static extern void QWidget_UnsetLocale(Self* c_this);
	[LinkName("QWidget_IsRightToLeft")]
	public static extern bool QWidget_IsRightToLeft(Self* c_this);
	[LinkName("QWidget_IsLeftToRight")]
	public static extern bool QWidget_IsLeftToRight(Self* c_this);
	[LinkName("QWidget_SetFocus")]
	public static extern void QWidget_SetFocus(Self* c_this);
	[LinkName("QWidget_IsActiveWindow")]
	public static extern bool QWidget_IsActiveWindow(Self* c_this);
	[LinkName("QWidget_ActivateWindow")]
	public static extern void QWidget_ActivateWindow(Self* c_this);
	[LinkName("QWidget_ClearFocus")]
	public static extern void QWidget_ClearFocus(Self* c_this);
	[LinkName("QWidget_SetFocusWithReason")]
	public static extern void QWidget_SetFocusWithReason(Self* c_this, int64 reason);
	[LinkName("QWidget_FocusPolicy")]
	public static extern int64 QWidget_FocusPolicy(Self* c_this);
	[LinkName("QWidget_SetFocusPolicy")]
	public static extern void QWidget_SetFocusPolicy(Self* c_this, int64 policy);
	[LinkName("QWidget_HasFocus")]
	public static extern bool QWidget_HasFocus(Self* c_this);
	[LinkName("QWidget_SetTabOrder")]
	public static extern void QWidget_SetTabOrder(QWidget* param1, QWidget* param2);
	[LinkName("QWidget_SetFocusProxy")]
	public static extern void QWidget_SetFocusProxy(Self* c_this, QWidget* focusProxy);
	[LinkName("QWidget_FocusProxy")]
	public static extern QWidget* QWidget_FocusProxy(Self* c_this);
	[LinkName("QWidget_ContextMenuPolicy")]
	public static extern int64 QWidget_ContextMenuPolicy(Self* c_this);
	[LinkName("QWidget_SetContextMenuPolicy")]
	public static extern void QWidget_SetContextMenuPolicy(Self* c_this, int64 policy);
	[LinkName("QWidget_GrabMouse")]
	public static extern void QWidget_GrabMouse(Self* c_this);
	[LinkName("QWidget_GrabMouseWithQCursor")]
	public static extern void QWidget_GrabMouseWithQCursor(Self* c_this, QCursor* param1);
	[LinkName("QWidget_ReleaseMouse")]
	public static extern void QWidget_ReleaseMouse(Self* c_this);
	[LinkName("QWidget_GrabKeyboard")]
	public static extern void QWidget_GrabKeyboard(Self* c_this);
	[LinkName("QWidget_ReleaseKeyboard")]
	public static extern void QWidget_ReleaseKeyboard(Self* c_this);
	[LinkName("QWidget_GrabShortcut")]
	public static extern int32 QWidget_GrabShortcut(Self* c_this, QKeySequence* key);
	[LinkName("QWidget_ReleaseShortcut")]
	public static extern void QWidget_ReleaseShortcut(Self* c_this, int32 id);
	[LinkName("QWidget_SetShortcutEnabled")]
	public static extern void QWidget_SetShortcutEnabled(Self* c_this, int32 id);
	[LinkName("QWidget_SetShortcutAutoRepeat")]
	public static extern void QWidget_SetShortcutAutoRepeat(Self* c_this, int32 id);
	[LinkName("QWidget_MouseGrabber")]
	public static extern QWidget* QWidget_MouseGrabber();
	[LinkName("QWidget_KeyboardGrabber")]
	public static extern QWidget* QWidget_KeyboardGrabber();
	[LinkName("QWidget_UpdatesEnabled")]
	public static extern bool QWidget_UpdatesEnabled(Self* c_this);
	[LinkName("QWidget_SetUpdatesEnabled")]
	public static extern void QWidget_SetUpdatesEnabled(Self* c_this, bool enable);
	[LinkName("QWidget_GraphicsProxyWidget")]
	public static extern QGraphicsProxyWidget* QWidget_GraphicsProxyWidget(Self* c_this);
	[LinkName("QWidget_Update")]
	public static extern void QWidget_Update(Self* c_this);
	[LinkName("QWidget_Repaint")]
	public static extern void QWidget_Repaint(Self* c_this);
	[LinkName("QWidget_Update2")]
	public static extern void QWidget_Update2(Self* c_this, int32 x, int32 y, int32 w, int32 h);
	[LinkName("QWidget_UpdateWithQRect")]
	public static extern void QWidget_UpdateWithQRect(Self* c_this, QRect* param1);
	[LinkName("QWidget_UpdateWithQRegion")]
	public static extern void QWidget_UpdateWithQRegion(Self* c_this, QRegion* param1);
	[LinkName("QWidget_Repaint2")]
	public static extern void QWidget_Repaint2(Self* c_this, int32 x, int32 y, int32 w, int32 h);
	[LinkName("QWidget_RepaintWithQRect")]
	public static extern void QWidget_RepaintWithQRect(Self* c_this, QRect* param1);
	[LinkName("QWidget_RepaintWithQRegion")]
	public static extern void QWidget_RepaintWithQRegion(Self* c_this, QRegion* param1);
	[LinkName("QWidget_SetVisible")]
	public static extern void QWidget_SetVisible(Self* c_this, bool visible);
	[LinkName("QWidget_SetHidden")]
	public static extern void QWidget_SetHidden(Self* c_this, bool hidden);
	[LinkName("QWidget_Show")]
	public static extern void QWidget_Show(Self* c_this);
	[LinkName("QWidget_Hide")]
	public static extern void QWidget_Hide(Self* c_this);
	[LinkName("QWidget_ShowMinimized")]
	public static extern void QWidget_ShowMinimized(Self* c_this);
	[LinkName("QWidget_ShowMaximized")]
	public static extern void QWidget_ShowMaximized(Self* c_this);
	[LinkName("QWidget_ShowFullScreen")]
	public static extern void QWidget_ShowFullScreen(Self* c_this);
	[LinkName("QWidget_ShowNormal")]
	public static extern void QWidget_ShowNormal(Self* c_this);
	[LinkName("QWidget_Close")]
	public static extern bool QWidget_Close(Self* c_this);
	[LinkName("QWidget_Raise")]
	public static extern void QWidget_Raise(Self* c_this);
	[LinkName("QWidget_Lower")]
	public static extern void QWidget_Lower(Self* c_this);
	[LinkName("QWidget_StackUnder")]
	public static extern void QWidget_StackUnder(Self* c_this, QWidget* param1);
	[LinkName("QWidget_Move")]
	public static extern void QWidget_Move(Self* c_this, int32 x, int32 y);
	[LinkName("QWidget_MoveWithQPoint")]
	public static extern void QWidget_MoveWithQPoint(Self* c_this, QPoint* param1);
	[LinkName("QWidget_Resize")]
	public static extern void QWidget_Resize(Self* c_this, int32 w, int32 h);
	[LinkName("QWidget_ResizeWithQSize")]
	public static extern void QWidget_ResizeWithQSize(Self* c_this, QSize* param1);
	[LinkName("QWidget_SetGeometry")]
	public static extern void QWidget_SetGeometry(Self* c_this, int32 x, int32 y, int32 w, int32 h);
	[LinkName("QWidget_SetGeometryWithGeometry")]
	public static extern void QWidget_SetGeometryWithGeometry(Self* c_this, QRect* geometry);
	[LinkName("QWidget_SaveGeometry")]
	public static extern libqt_string QWidget_SaveGeometry(Self* c_this);
	[LinkName("QWidget_RestoreGeometry")]
	public static extern bool QWidget_RestoreGeometry(Self* c_this, libqt_string geometry);
	[LinkName("QWidget_AdjustSize")]
	public static extern void QWidget_AdjustSize(Self* c_this);
	[LinkName("QWidget_IsVisible")]
	public static extern bool QWidget_IsVisible(Self* c_this);
	[LinkName("QWidget_IsVisibleTo")]
	public static extern bool QWidget_IsVisibleTo(Self* c_this, QWidget* param1);
	[LinkName("QWidget_IsHidden")]
	public static extern bool QWidget_IsHidden(Self* c_this);
	[LinkName("QWidget_IsMinimized")]
	public static extern bool QWidget_IsMinimized(Self* c_this);
	[LinkName("QWidget_IsMaximized")]
	public static extern bool QWidget_IsMaximized(Self* c_this);
	[LinkName("QWidget_IsFullScreen")]
	public static extern bool QWidget_IsFullScreen(Self* c_this);
	[LinkName("QWidget_WindowState")]
	public static extern int64 QWidget_WindowState(Self* c_this);
	[LinkName("QWidget_SetWindowState")]
	public static extern void QWidget_SetWindowState(Self* c_this, int64 state);
	[LinkName("QWidget_OverrideWindowState")]
	public static extern void QWidget_OverrideWindowState(Self* c_this, int64 state);
	[LinkName("QWidget_SizeHint")]
	public static extern QSize QWidget_SizeHint(Self* c_this);
	[LinkName("QWidget_MinimumSizeHint")]
	public static extern QSize QWidget_MinimumSizeHint(Self* c_this);
	[LinkName("QWidget_SizePolicy")]
	public static extern QSizePolicy QWidget_SizePolicy(Self* c_this);
	[LinkName("QWidget_SetSizePolicy")]
	public static extern void QWidget_SetSizePolicy(Self* c_this, QSizePolicy sizePolicy);
	[LinkName("QWidget_SetSizePolicy2")]
	public static extern void QWidget_SetSizePolicy2(Self* c_this, int64 horizontal, int64 vertical);
	[LinkName("QWidget_HeightForWidth")]
	public static extern int32 QWidget_HeightForWidth(Self* c_this, int32 param1);
	[LinkName("QWidget_HasHeightForWidth")]
	public static extern bool QWidget_HasHeightForWidth(Self* c_this);
	[LinkName("QWidget_VisibleRegion")]
	public static extern QRegion QWidget_VisibleRegion(Self* c_this);
	[LinkName("QWidget_SetContentsMargins")]
	public static extern void QWidget_SetContentsMargins(Self* c_this, int32 left, int32 top, int32 right, int32 bottom);
	[LinkName("QWidget_SetContentsMarginsWithMargins")]
	public static extern void QWidget_SetContentsMarginsWithMargins(Self* c_this, QMargins* margins);
	[LinkName("QWidget_ContentsMargins")]
	public static extern QMargins QWidget_ContentsMargins(Self* c_this);
	[LinkName("QWidget_ContentsRect")]
	public static extern QRect QWidget_ContentsRect(Self* c_this);
	[LinkName("QWidget_Layout")]
	public static extern QLayout* QWidget_Layout(Self* c_this);
